[package]
name = "libexif-sys"
version = "0.1.0"
authors = ["Soham Sen <soham@aftershoot.com>"]
description = "FFI bindings to libexif"
homepage = "https://github.com/aftershootco/libexif-sys"
repository = "https://github.com/aftershootco/libexif-sys"
license = "MIT"
readme = "README.md"
keywords = ["libexif", "exif", "image"]

build = "build.rs"
links = "exif"
